--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
   <!-- Background video -->
   <video autoplay muted loop id="bg-video">
-    <source src="https://files.catbox.moe/bykre9.png" type="gambar/jpg" />
+    <source src="https://files.catbox.moe/bykre9.png" type="png" />
   </video>
 p
   <!-- Chatbox -->
